--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Jai's personal site</title>
 </head>
 <body style="background-color:lightgrey;">
-	<img src="C:\Users\gowtham\Documents\jai\royy (1).jpg">
+	<img src="C:\Users\gowtham\Documents\jai\image.png">
    <h1>Jai Suriya</h1>
    <p><em>I am <strong><a href="https://en.wikipedia.org/wiki/Web_developer">"Web Developer"</a></strong>.</em></p>
    <p>From Vellore,Tamil Nadu,India</p>
@@ -34,17 +34,20 @@
    	<h4><a href="https://instagram.com/__jaisuriya__?utm_medium=copy_link">"Instagram link"</a></h4>
    	<h4><a href="https://www.facebook.com/jairoy.jairoy.771">"Facebook link"</a></h4>
    </ul>
-   <h3>Inspired Quotes</h3>
+   <hr>
+   <h3>Inspired Quotes 😝</h3>
   <ul>
   	<p>“You’re off to great places, today is your day. Your mountain is waiting, so get on your way”<center>-<a href="https://en.wikipedia.org/wiki/Dr._Seuss">Dr. Seuss</a></center> </p>
   	<p>You always pass failure on the way to success”<center>-<a href="https://en.wikipedia.org/wiki/Mickey_Rooney">Mickey Rooney</a></center></p>
   	<p>No one is perfect - that’s why pencils have erasers"</p><center>-<a href="https://www.pinterest.com/wolfgangriebe/">Wolfgang Riebe</a></center>
    </ul>
-   
-   <h4>My contact</h4>
+    <hr>
+
+
+   <center><h4>My contact</h4>
     <ul>
     	<h5>Jai Suriya<br>Call-9629511926<br>Gmail-heatseekii@gmail.com</h5>
-    </ul>
+    </ul></center>
 
 </body>
 </html>
