--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Jai's personal site</title>
 </head>
 <body style="background-color:lightgrey;">
-	<img src="C:\Users\gowtham\Documents\jai\image.png">
+	<img src="https://www.linkpicture.com/q/image_39.png">
    <h1>Jai Suriya</h1>
    <p><em>I am <strong><a href="https://en.wikipedia.org/wiki/Web_developer">"Web Developer"</a></strong>.</em></p>
    <p>From Vellore,Tamil Nadu,India</p>
@@ -41,7 +41,6 @@
   	<p>You always pass failure on the way to success”<center>-<a href="https://en.wikipedia.org/wiki/Mickey_Rooney">Mickey Rooney</a></center></p>
   	<p>No one is perfect - that’s why pencils have erasers"</p><center>-<a href="https://www.pinterest.com/wolfgangriebe/">Wolfgang Riebe</a></center>
    </ul>
-    <hr>
 
 
    <center><h4>My contact</h4>
