--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
 	<title>Jai's personal site</title>
 </head>
-<body style="background-color:lightgrey;">
-	<img src="https://www.linkpicture.com/q/63385b4f-0426-40bf-a6bf-eed447c23266.jpg">
-   <h1>Jai Suriya</h1>
+<table>
+    <tr>
+        <td><img src="https://www.linkpicture.com/q/63385b4f-0426-40bf-a6bf-eed447c23266-3.jpg"></td>
+        <td> <h1>Jai Suriya</h1>
    <p><em>I am <strong><a href="https://en.wikipedia.org/wiki/Web_developer">"Web Developer"</a></strong>.</em></p>
-   <p>From Vellore,Tamil Nadu,India</p>
+   <p>From Vellore,Tamil Nadu,India</p></td>
+    </tr>
+</table>
+<body style="background-color:lightgrey;">
    <hr size="3">
    <h3>Education &#128526;</h3>
    <ul>
