--- a/index.html
+++ b/index.html
@@ -45,12 +45,20 @@
   	<p>You always pass failure on the way to success”<center>-<a href="https://en.wikipedia.org/wiki/Mickey_Rooney">Mickey Rooney</a></center></p>
   	<p>No one is perfect - that’s why pencils have erasers"</p><center>-<a href="https://www.pinterest.com/wolfgangriebe/">Wolfgang Riebe</a></center>
    </ul>
+   <hr>
+   <h3>My Contact</h3>
+   <h4>Jai Suriya<br>Call:9629511926<br>Gmail:heatseekii@gmail.com<br></h4>
+   <form action="mailto:heatseekii@gmail.com" method="post" enctype="text/plain">
+       <label>Your Email:</label>
+       <input type="text" name="your name">
+       <input type="color" name="value"><br>
+       <label>Password:</label>
+       <input type="password" name="password"><br>
+       <label>Your Message</label><br>
+       <textarea name="your message" rows="10" cols="30"></textarea><br>
+       <input type="submit" name="" >
+   </form>
 
-
-   <center><h4>My contact</h4>
-    <ul>
-    	<h5>Jai Suriya<br>Call-9629511926<br>Gmail-heatseekii@gmail.com</h5>
-    </ul></center>
 
 </body>
 </html>
