--- a/index.html
+++ b/index.html
@@ -11,7 +11,22 @@
    <p>From Vellore,Tamil Nadu,India</p></td>
     </tr>
 </table>
-<body style="background-color:lightgrey;">
+<style>
+    
+    body{
+       background-color:#d5dbb3;    
+    }
+
+    hr{
+        background-color: white;
+        border-style:inset;
+        height: 2=px;
+    }
+    img{
+        height: 120px;
+    }
+</style>
+<body>
    <hr size="3">
    <h3>Education &#128526;</h3>
    <ul>
