--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <style>
     
     body{
-       background-color:#d5dbb3;    
+       background-color:#F6DFEB;    
     }
 
     hr{
@@ -61,8 +61,8 @@
   	<p>No one is perfect - that’s why pencils have erasers"</p><center>-<a href="https://www.pinterest.com/wolfgangriebe/">Wolfgang Riebe</a></center>
    </ul>
    <hr>
-   <h3>My Contact</h3>
-   <h4>Jai Suriya<br>Call:9629511926<br>Gmail:heatseekii@gmail.com<br></h4>
+   <h4>My Contact</h4>
+   <h5>Jai Suriya<br>Call:9629511926<br>Gmail:heatseekii@gmail.com<br></h5>
    <form action="mailto:heatseekii@gmail.com" method="post" enctype="text/plain">
        <label>Your Email:</label>
        <input type="text" name="your name">
